# startup-ecosystem-intelligence

./: .dockerignore  .env.example  .gitignore  .railwayignore  .replit  Claude.md  DEPLOYMENT.md  Dockerfile  Dockerfile.railway  Procfile  README.md  app.py  create_relationships_batch.py  list_companies.py  main.py  nixpacks.toml  package.json  pyproject.toml  railway.json  render.yaml  replit.nix  requirements-minimal.txt  requirements-replit.txt  requirements.txt  resume_pipeline.py  run_api.py  run_pipeline.py  start_dev.py
.github/workflows/: cd.yml  ci.yml
backend/: config.py  neo4j_pipeline.py
backend/agents/: scoring_agent.py
backend/api/: graph_rag_service.py  main.py
backend/collectors/: github_collector.py  google_cse.py  website_scraper.py  yc_scraper.py
backend/config/: data_sources.py
backend/tests/: test_pipeline.py
backend/utils/: embeddings.py  name_guard.py  neo4j_store.py
data/cache/google_cse/: 42floors-founders-22d709f7c0.json  (+182 more)
data/samples/: github_repos.json
frontend/: .env.example  .env.production  deployment-start.sh  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CompanyCard.tsx  CompanyDetail.tsx  CompanyGrid.tsx  HomeClient.tsx  InvestorCard.tsx  InvestorGrid.tsx  PersonCard.tsx  PersonDetail.tsx  PersonGrid.tsx  RepositoryCard.tsx  RepositoryDetail.tsx  RepositoryGrid.tsx  ResponseDisplay.tsx  SearchBar.tsx
frontend/lib/: api-client.ts  auth.ts  types.ts
scripts/: validate_ci.py
(+7 files in other folders)
